--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.3",
+    "dotenv": "^16.3.1",
     "hardhat-tracer": "^2.5.1",
     "merkletreejs": "^0.3.10",
     "solmate": "^6.1.0",
