--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@nomiclabs/hardhat-etherscan": "^3.1.7",
     "@openzeppelin/contracts": "^4.9.3",
     "dotenv": "^16.3.1",
     "hardhat-tracer": "^2.5.1",
